Java程序漏洞，解决